# rusty-clock

./: .gitignore  Cargo.toml  ReadMe.md  rusty-clock.db  timer.db
src/: main.rs
src/clock/: db.rs  gui.rs  mod.rs  notification.rs  popup.rs  stdin.rs  timer_manager.rs  timer_structs.rs
