[package]
name = "rusty-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
notify-rust = "4.5.8"
iced = { version = "0.4", features = ["smol"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
clap = { version = "4.0.13", features = ["derive"] }
chrono = "0.4.22"
